k8s/network/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-service-a-to-b
spec:
  podSelector:
    matchLabels:
      app: service-b 
  policyTypes:
  - Ingress
  ingress:
  - from:
    # allow ingress controller namespace
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
